# ctfOverseer

./: LICENSE.md  Makefile.am  README.md  ctfOverseer.cfg  ctfOverseer.cpp  ctfOverseer.def  ctfOverseer.sln  ctfOverseer.vcxproj  ctfOverseer.vcxproj.filters  ctfOverseerAPI.h  ctfOverseerExtension.cpp  relativeCaptureBonus.cfg  relativeCaptureBonus.cpp  relativeCaptureBonus.sln  relativeCaptureBonus.vcxproj  relativeCaptureBonus.vcxproj.filters
